IDE: Prevent access violation in project resources dialog. Issue #25912, patch from Anton.
git-svn-id: trunk@46327 -

--- a/ide/frames/project_resources_options.lfm
+++ b/ide/frames/project_resources_options.lfm
@@ -35,6 +35,7 @@ object ResourcesOptionsFrame: TResourcesOptionsFrame
         Caption = 'Resource'
         Width = 326
       end>
+    HideSelection = False
     RowSelect = True
     TabOrder = 0
     ViewStyle = vsReport
