IDE: Make toolbuttons higher in Additions and Overrides options page.
git-svn-id: trunk@46332 -

--- a/ide/frames/compiler_modematrix.lfm
+++ b/ide/frames/compiler_modematrix.lfm
@@ -13,6 +13,7 @@ object CompOptModeMatrixFrame: TCompOptModeMatrixFrame
     Height = 26
     Top = 0
     Width = 550
+    ButtonHeight = 25
     Caption = 'BMMatrixToolBar'
     EdgeBorders = []
     List = True
